--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@huggingface/transformers": "^3.8.0",
     "astro": "^5.15.9",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "vitest": "^4.0.13"
   }
 }
