--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@huggingface/inference": "^4.13.3",
     "astro": "^5.15.9",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3"
   }
 }
