--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "pg": "^8.16.3",
-    "vitest": "^4.0.13"
-    "pgvector": "^0.2.1"
-    "node-fetch": "^3.3.2",
-    "pg": "^8.16.3"
+    "vitest": "^4.0.13",
+    "pgvector": "^0.2.1",
+    "node-fetch": "^3.3.2"
   }
 }
