--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@huggingface/inference": "^4.13.3",
+    "@huggingface/transformers": "^3.8.0",
     "astro": "^5.15.9",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
-    "pgvector": "^0.2.1",
-    "node-fetch": "^3.3.2"
-    
+    "pgvector": "^0.2.1"
   }
 }
