--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/svelte": "^7.2.2",
     "@huggingface/inference": "^4.13.3",
     "@huggingface/transformers": "^3.8.0",
     "astro": "^5.15.9",
@@ -19,6 +20,8 @@
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "pgvector": "^0.2.1",
+    "svelte": "^5.44.1",
+    "typescript": "^5.9.3",
     "vitest": "^4.0.13"
   }
 }
