--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "svelte": "^5.44.1",
     "typescript": "^5.9.3",
     "vitest": "^4.0.13"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.57.0",
+    "@types/node": "^24.10.1"
   }
 }
